// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense list with empty list 1`] = `
<div
  className="content_container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render expense list with expenses 1`] = `
<div
  className="content_container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={195}
      createAt={0}
      description="gum"
      id="1"
      key="0"
      note=""
    />
    <ExpenseListItem
      amount={109500}
      createAt={-345600000}
      description="rent"
      id="2"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={4500}
      createAt={345600000}
      description="credit card"
      id="3"
      key="2"
      note=""
    />
  </div>
</div>
`;
